<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VideoPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="video_path_hint">Please input the path of the video</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="replay">Replay</string>
    <string name="stop">Stop</string>

</resources>
